--- a/buttons.html
+++ b/buttons.html
@@ -15,6 +15,14 @@
       width: 150px;
       font-size: medium;
       font-weight: bold;
+      transition: opacity 0.15s,
+                  box-shadow 0.15s
+      
+    }
+    .uber-button:hover
+    {
+      opacity: 0.8;
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
     }
     .amazon-button
     {
@@ -25,6 +33,11 @@
       font-size: medium;
       border: none;
       border-radius: 20px;
+      transition: opacity 0.15s;
+    }
+    .amazon-button:active
+    {
+      opacity: 0.7;
     }
     .github-button
     {
@@ -50,6 +63,20 @@
       width: 100px;
       height: 40px;
       cursor: pointer;
+      transition: opacity 0.15s,
+                  box-shadow 0.15s,
+                  background-color 0.15s,
+                  color 0.15s;
+    }
+    .linkedin-button:hover
+    {
+      opacity: 0.8;
+      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
+    }
+    .linkedin-button:active
+    {
+      background-color: rgb(10, 102, 194);
+      color: white;
     }
   </style>
 </head>
