--- a/buttons.html
+++ b/buttons.html
@@ -11,12 +11,16 @@
       background-color: black;
       color: white;
       border: none;
-      height: 50px;
-      width: 150px;
+      padding-left: 25px;
+      padding-right: 25px;
+      padding-top: 15px;
+      padding-bottom: 15px;
       font-size: medium;
       font-weight: bold;
       transition: opacity 0.15s,
-                  box-shadow 0.15s
+                  box-shadow 0.15s;
+      vertical-align: top;
+
       
     }
     .uber-button:hover
@@ -28,12 +32,15 @@
     {
       background-color: rgb(255, 216, 20);
       margin: 4px;
-      width: 200px;
-      height: 40px;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-left: 50px;
+      padding-right: 50px;
       font-size: medium;
       border: none;
       border-radius: 20px;
       transition: opacity 0.15s;
+      vertical-align: top;
     }
     .amazon-button:active
     {
@@ -42,7 +49,10 @@
     .github-button
     {
       background-color: rgb(46, 164, 79);
-      width: 100px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-right: 15px;
+      padding-left: 15px;
       height: 40px;
       color: white;
       font-size: medium;
@@ -50,6 +60,7 @@
       border-radius: 10px;
       margin: 4px;
       cursor: grab;
+      vertical-align: top;
 
     }
     .linkedin-button
@@ -60,13 +71,16 @@
       color:rgb(10, 102, 194);
       font-size: medium;
       font-weight: bold;
-      width: 100px;
-      height: 40px;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-left: 20px;
+      padding-right: 20px;
       cursor: pointer;
       transition: opacity 0.15s,
                   box-shadow 0.15s,
                   background-color 0.15s,
                   color 0.15s;
+      vertical-align: top;
     }
     .linkedin-button:hover
     {
