--- a/buttons.html
+++ b/buttons.html
@@ -5,94 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Buttons from popular websites!</title>
-  <style>
-    .uber-button
-    {
-      background-color: black;
-      color: white;
-      border: none;
-      padding-left: 25px;
-      padding-right: 25px;
-      padding-top: 15px;
-      padding-bottom: 15px;
-      font-size: medium;
-      font-weight: bold;
-      transition: opacity 0.15s,
-                  box-shadow 0.15s;
-      vertical-align: top;
-
-      
-    }
-    .uber-button:hover
-    {
-      opacity: 0.8;
-      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
-    }
-    .amazon-button
-    {
-      background-color: rgb(255, 216, 20);
-      margin: 4px;
-      padding-top: 8px;
-      padding-bottom: 8px;
-      padding-left: 50px;
-      padding-right: 50px;
-      font-size: medium;
-      border: none;
-      border-radius: 20px;
-      transition: opacity 0.15s;
-      vertical-align: top;
-    }
-    .amazon-button:active
-    {
-      opacity: 0.7;
-    }
-    .github-button
-    {
-      background-color: rgb(46, 164, 79);
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-right: 15px;
-      padding-left: 15px;
-      height: 40px;
-      color: white;
-      font-size: medium;
-      border: none;
-      border-radius: 10px;
-      margin: 4px;
-      cursor: grab;
-      vertical-align: top;
-
-    }
-    .linkedin-button
-    {
-      background-color: white;
-      border: 1px solid rgb(10, 102, 194);
-      border-radius: 20px;
-      color:rgb(10, 102, 194);
-      font-size: medium;
-      font-weight: bold;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      padding-left: 20px;
-      padding-right: 20px;
-      cursor: pointer;
-      transition: opacity 0.15s,
-                  box-shadow 0.15s,
-                  background-color 0.15s,
-                  color 0.15s;
-      vertical-align: top;
-    }
-    .linkedin-button:hover
-    {
-      opacity: 0.8;
-      box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.6);
-    }
-    .linkedin-button:active
-    {
-      background-color: rgb(10, 102, 194);
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles/buttons.css">
 </head>
 <body>
   
