--- a/texts.html
+++ b/texts.html
@@ -5,60 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Texts</title>
-  <style>
-    .p_tahoma
-    {
-      font-family: TAHOMA;
-      font-size: 30px;
-      font-weight: bold;
-    }
-    p {
-      font-family: Verdana, Geneva, Tahoma, sans-serif;
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-    .html_course
-    {
-      font-size: 25px;
-      font-weight: bold;
-    }
-    .beg_to_pro
-    {
-      font-size: 20px;
-      opacity: 0.85;
-    }
-    .text_course
-    {
-      margin-top: 5px;
-      width: 400px;
-      font-size: 20px;
-    }
-    .get_started
-    {
-      background-color: green;
-      color: white;
-      text-align: center;
-      font-size: 20px;
-      border: none;
-      border-radius: 10px;
-      padding-left: 10px;
-      padding-right: 10px;
-      margin-top: 5px;
-      height: 50px;
-    }
-    .skill
-    {
-      font-size: 30px;
-      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-      
-    }
-    .learn_more
-    {
-      margin-top: 5px;
-    }
-
-
-  </style>
+  <link rel="stylesheet" href="./styles/texts.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <p class="p_tahoma">THIS IS TAHOMA FONT</p>
