--- a/webgl/index.html
+++ b/webgl/index.html
@@ -10,6 +10,7 @@
 <body onload="initCanvas();">
     <canvas id="canvas_triangle"></canvas>
     <canvas id="canvas_square"></canvas>
+    <canvas id="canvas_hegaxon"></canvas>
     
     <script src="scripts/app.js"></script>
 </body>
