Added webgl 3d cube example

--- a/webgl/cube.html
+++ b/webgl/cube.html
@@ -5,17 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example webgl</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/cube.css">
 </head>
 <body onload="initCanvas();">
-    
-    <div>
-    <canvas id="canvas_triangle"></canvas>
-    <canvas id="canvas_square"></canvas>
-    <canvas id="canvas_hexagon"></canvas>
-    </div>
-    <a href="cube.html">Cube</a>
-
-    <script src="scripts/app.js"></script>
+    <canvas id="canvas_cube"></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/gl-matrix@3/gl-matrix.js"></script>
+    <script src="scripts/cube.js"></script>
 </body>
 </html>
